--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,24 @@
 page-home {
 
+    .fixed-content{
+        background-color: #3F3F57;
+    }
+
+    .temp-logo-container{
+        margin-top: 50px;
+    }
+
+    .temp-logo{
+       color : white;
+       left: 0;
+       right: 0;
+       position: absolute;
+       margin-left: auto;
+       margin-right: auto;
+       margin-top: 20px;
+       text-align: center;
+       font-size: 50px;
+    }
+
+
 }
