--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -8,13 +8,14 @@ page-login {
     .div-login{
         background-color: #ffffff;
         bottom: 0;
-        left: 0;
-        right: 0;
+        left: 30px;
+        right: 20px;
         position: absolute;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 90px;
-        width: 69%; 
+        margin-bottom: 15px;
+        width: 75%; 
+        height: 49%;
     }
 
     .button-enter{
@@ -23,22 +24,4 @@ page-login {
         background-color: #3F3F57;
     }
 
-    /*.temp-logo-container{
-        margin-top: 50px;
-    }
-
-    .temp-logo{
-       color : white;
-       left: 0;
-       right: 0;
-       position: absolute;
-       margin-left: auto;
-       margin-right: auto;
-       margin-top: 20px;
-       text-align: center;
-       font-size: 30px;
-    }*/
-
-}
-
-
+}    
