--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,10 @@
 page-login {
 
     .login-background {
-        background-image: url('../assets/background/login.png');
+        background-image: url('../assets/images/login.jpg');
         background-size: cover;
+        position: relative;
+        background-position: center;
     }
 
     .div-login{
@@ -13,15 +15,30 @@ page-login {
         position: absolute;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 15px;
-        width: 75%; 
-        height: 49%;
+        margin-bottom: 100px;
+        width: 65%; 
+        height: 39%;
     }
 
     .button-enter{
-        margin-top: 10px;
+        margin-top: 20px;
         height: 50px;
         background-color: #3F3F57;
+    }
+
+    .temp-logo-container{
+        margin-top: 50px;
+    }
+
+    .temp-logo{
+       color : white;
+       left: 0;
+       right: 0;
+       position: absolute;
+       margin-left: auto;
+       margin-right: auto;
+       margin-top: 20px;
+       height: 120px;
     }
 
 }    
