--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,39 +1,39 @@
 <ion-menu [content]="content">
-    <ion-header color="red">
-        <ion-toolbar>
-            <ion-grid>
-                <ion-row>
-                    <ion-col>
-                        <ion-item class="transparent-background"> 
-                            <ion-avatar>
-                                <img src="assets/background/menu-image.jpg">    
-                            </ion-avatar>  
-                            <ion-title text-left margin-top="10px">
-                                <h3 class="menu-header-name">Lucas Daniel Pedroso</h3>
-                                <h3 class="menu-header-name">Grupo 10</h3>
-                                <h3 class="menu-header-name">lukasdpdeveloper@hotmail.com</h3>
-                            </ion-title>
-                            <ion-title text-left>
-                                <!--<h2 class="menuheadername">{{ userEmail }}</h2>-->
-                            </ion-title>
-                        </ion-item>
-                    </ion-col>    
-                </ion-row>    
-            </ion-grid>   
-        </ion-toolbar>
+    <ion-header>
+        <ion-item class="transparent-background">
+            <ion-row >
+                <ion-col>
+                    <ion-avatar>
+                        <img src="../assets/images/marty.png">
+                    </ion-avatar>  
+                </ion-col>
+            </ion-row>        
+            <ion-row style="margin-top: 20px;">
+                <ion-col>
+                    <ion-title >
+                        <h3 text-left class="menuheadername">Lucas Daniel Pedroso</h3>
+                        <h3 text-left class="menuheadername">Grupo 010</h3>
+                        <h3 text-left class="menuheadername">lukas_boo@hotmail.com</h3>
+                    </ion-title>
+                </ion-col>
+            </ion-row>    
+        </ion-item>    
     </ion-header>
 
-    <ion-content class="transparent-background" padding="10px">
-            <ion-list *ngFor="let p of pages">
-                  <ion-item class="transparent-background" style="border-bottom: 2px solid white !important;">
-                    <ion-icon [name]="p.icon" item-left primary color="dark"></ion-icon>
-                    {{ p.name }}
-                    <button menuClose ion-button color="light" full (click)="openPage(p)" style="color: #000000" class="transparent-background">
-                        {{p.title}}
-                    </button>
-                  </ion-item>  
-            </ion-list>
-          </ion-content>
-        </ion-menu>
+    <ion-content padding="10px">
+        <ion-list *ngFor="let p of pages" no-lines>
+            <ion-item class="transparent-background" text-left>
+                <ion-icon [name]="p.icon" item-left primary></ion-icon>
+                {{ p.name }}
+                <button menuClose ion-button outline full clear (click)="openPage(p)" color="dark" class="transparent-background">
+                    {{p.title}}
+                </button>
+            </ion-item>  
+        </ion-list>
+    </ion-content>
+
+
+        
+</ion-menu>
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
