--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -29,11 +29,10 @@ page-home {
 
     ion-grid {
         height: 100%;
-        border: 2px solid black;
     }
 
     ion-row {
-        height: 100%;
+        height: 20%;
         text-align: center;
     }
 
@@ -65,6 +64,10 @@ page-home {
         color: white;
         float: right;
         right: 0;
+    }
+
+    .logo{
+        height: 13%;
     }
 
 
