--- a/src/pages/assemblies/assemblies.scss
+++ b/src/pages/assemblies/assemblies.scss
@@ -1,3 +1,137 @@
 page-assemblies {
 
+    .fixed-content{
+        background-color: #3F3F57;
+    }
+
+    .transparent-background-assemblies{
+        background-color: transparent;
+        box-shadow: none;
+    }
+
+    .icon-header-assemblies{
+        color: white;
+        float: right;
+        right: 0;
+    }
+
+    .toolbar-background-ios {
+        background-color: transparent;
+    }
+
+    ul {list-style-type: none;}
+    body {font-family: Verdana, sans-serif;}
+    
+    /* Month header */
+    .month {
+        padding: 70px 25px;
+        width: 100%;
+        background: #1abc9c;
+        text-align: center;
+    }
+    
+    /* Month list */
+    .month ul {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .month ul li {
+        color: white;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
+    
+    /* Previous button inside month header */
+    .month .prev {
+        float: left;
+        padding-top: 10px;
+    }
+    
+    /* Next button */
+    .month .next {
+        float: right;
+        padding-top: 10px;
+    }
+    
+    /* Weekdays (Mon-Sun) */
+    .weekdays {
+        margin: 0;
+        padding: 10px 0;
+        background-color:#ddd;
+    }
+    
+    .weekdays li {
+        display: inline-block;
+        width: 13.6%;
+        color: #666;
+        text-align: center;
+    }
+    
+    /* Days (1-31) */
+    .days {
+        padding: 10px 0;
+        background: #eee;
+        margin: 0;
+    }
+    
+    .days li {
+        list-style-type: none;
+        display: inline-block;
+        width: 13.6%;
+        text-align: center;
+        margin-bottom: 5px;
+        font-size:12px;
+        color:#777;
+    }
+    
+    /* Highlight the "current" day */
+    .days li .active {
+        padding: 5px;
+        background: #1abc9c;
+        color: white !important
+    }
+
+    ion-grid {
+        height: 45%;
+        width: 100%;
+    }
+
+    ion-row {
+        height: 45%;
+        text-align: center;
+    }
+
+    ion-col {
+        text-align: center;
+    }
+
+    .calendar-font{
+        color: white;
+    }
+
+    .calendar-background{
+        background-color: grey;
+        box-shadow: none;
+        
+    }
+
+    .item-ios.item-block .item-inner {
+        padding-right: 8px;
+        border-bottom: none;
+    }
+
+    .listTitle
+    {
+        color : white !important;
+    }
+
+    .icon-header-assemblies{
+        color: white;
+        float: right;
+        right: 0;
+        font-size: 30px;
+    }
+
 }
