--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -17,13 +17,13 @@ page-login {
         margin-right: auto;
         margin-bottom: 100px;
         width: 65%; 
-        height: 39%;
+        height: 44%;
     }
 
     .button-enter{
         margin-top: 20px;
         height: 50px;
-        background-color: #3F3F57;
+        background-color: #263238;
     }
 
     .temp-logo-container{
