--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,6 +39,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
+  soft:       #7C7070,
   def:        #253237
 );
 
