contemplation page finished

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,9 +26,9 @@
                 <ion-icon [name]="p.icon" item-left primary></ion-icon>
                 {{ p.name }}
                 <ion-buttons start>
-                <button menuClose ion-button outline full clear item-left text-left (click)="openPage(p)" color="dark" class="transparent-background" style="left: -72px;">
-                    {{p.title}}
-                </button>
+                    <button menuClose ion-button outline full clear item-left text-left (click)="openPage(p)" color="dark" class="transparent-background" style="font-size: 12px; text-align: left">
+                        {{p.title}}
+                    </button>
             </ion-buttons>
             </ion-item>  
         </ion-list>
