--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -79,3 +79,7 @@ ion-menu div ion-header ion-item div.item-inner div{
     margin: -28px 0 16px;
     
 }
+
+.item-md [item-left], .item-md [item-right], .item-md [item-start], .item-md [item-end] {
+     margin: 0px 0px 0px 0; 
+}
