--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   soft:       #7C7070,
-  def:        #253237
+  def:        #253237,
+  defblue:    #022b59
 
 );
 
