--- a/src/pages/assemblies/assemblies.scss
+++ b/src/pages/assemblies/assemblies.scss
@@ -19,80 +19,6 @@ page-assemblies {
         background-color: transparent;
     }
 
-    ul {list-style-type: none;}
-    body {font-family: Verdana, sans-serif;}
-    
-    /* Month header */
-    .month {
-        padding: 70px 25px;
-        width: 100%;
-        background: #1abc9c;
-        text-align: center;
-    }
-    
-    /* Month list */
-    .month ul {
-        margin: 0;
-        padding: 0;
-    }
-    
-    .month ul li {
-        color: white;
-        font-size: 20px;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-    }
-    
-    /* Previous button inside month header */
-    .month .prev {
-        float: left;
-        padding-top: 10px;
-    }
-    
-    /* Next button */
-    .month .next {
-        float: right;
-        padding-top: 10px;
-    }
-    
-    /* Weekdays (Mon-Sun) */
-    .weekdays {
-        margin: 0;
-        padding: 10px 0;
-        background-color:#ddd;
-    }
-    
-    .weekdays li {
-        display: inline-block;
-        width: 13.6%;
-        color: #666;
-        text-align: center;
-    }
-    
-    /* Days (1-31) */
-    .days {
-        padding: 10px 0;
-        background: #eee;
-        margin: 0;
-    }
-    
-    .days li {
-        list-style-type: none;
-        display: inline-block;
-        width: 13.6%;
-        text-align: center;
-        margin-bottom: 5px;
-        font-size:12px;
-        color:#777;
-    }
-    
-    /* Highlight the "current" day */
-    .days li .active {
-        padding: 5px;
-        background: #1abc9c;
-        color: white !important
-    }
-
     .ion-grid-assemblie {
         height: 35%;
         width: 100%;
@@ -151,6 +77,14 @@ page-assemblies {
         height: 100%;
         width: 100%;
         opacity: 0.5;
+    }
+
+    .ion-col-assemblie.active{
+        background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    .label-md {
+        margin: 10px 8px 12px 0;
     }
 
 }
