notification icon finished

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,9 +11,9 @@
             <ion-row style="margin-top: 20px;">
                 <ion-col>
                     <ion-title >
-                        <h3 text-left class="menuheadername">Lucas Daniel Pedroso</h3>
-                        <h3 text-left class="menuheadername">Grupo 010</h3>
-                        <h3 text-left class="menuheadername">lukas_boo@hotmail.com</h3>
+                        <h2 text-left class="menuheadername"><strong>Lucas Daniel Pedroso</strong></h2>
+                        <h2 text-left class="menuheadername"><strong>Grupo 010</strong></h2>
+                        <h2 text-left class="menuheadername"><strong>lukas_boo@hotmail.com</strong></h2>
                     </ion-title>
                 </ion-col>
             </ion-row>    
