--- a/src/pages/contemplation/contemplation.scss
+++ b/src/pages/contemplation/contemplation.scss
@@ -3,4 +3,13 @@ page-contemplation {
     .card-not {
         height: 10%;
     }
+
+    .icon-header-contemp{
+        color: white;
+        float: right;
+        right: 0;
+        font-size: 30px;
+    }
+
+
 }
