--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -61,7 +61,7 @@ ion-menu .header {
     color: white;
     margin-top: 100px;
     font-weight: bold;
-    
+    text-shadow: 2px 1px #263238;
 }
 
 ion-menu .header ion-avatar img{ 
