--- a/src/pages/bids/bids.scss
+++ b/src/pages/bids/bids.scss
@@ -4,6 +4,7 @@ page-bids {
         color: white;
         float: right;
         right: 0;
+        font-size: 30px;
     }
 
     .listTitle
@@ -18,7 +19,8 @@ page-bids {
 
     .input-bids{
         border: 1px solid black;
-        width: 70%;
+        width: 100%;
+        height: 80%;
         margin: 0 auto;
     }
 
@@ -66,6 +68,7 @@ page-bids {
 
     .bid-imovel{
         background-color: #6e767a;
+        margin-top: -3px;
     }
 
     .house{
