--- a/src/pages/boleto/boleto.scss
+++ b/src/pages/boleto/boleto.scss
@@ -1,3 +1,9 @@
 page-boleto {
+    .icon-header-boleto{
+        color: white;
+        float: right;
+        right: 0;
+        font-size: 30px;
+    }
 
 }
