--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -59,11 +59,11 @@ page-login {
      }
 
      .login-text{
-        text-shadow: 2px 2px #263238;
+        text-shadow: 2px 2px #C4BABA;
      }
 
      .grid-login{
-        background-color: transparent;
+        background-color: white;
         box-shadow: none;
         border: 2px solid #263238;
         border-radius: 30px;
