boleto alert dialog

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,8 @@ $colors: (
   dark:       #222,
   soft:       #7C7070,
   def:        #253237,
-  defblue:    #022b59
+  defblue:    #022b59,
+  warning:    #B1B405
 
 );
 
