--- a/src/pages/assemblies/assemblies.scss
+++ b/src/pages/assemblies/assemblies.scss
@@ -87,4 +87,16 @@ page-assemblies {
         margin: 10px 8px 12px 0;
     }
 
+    .icon-date-assemblie{
+        margin-right: 10px;
+    }
+
+    ion-icon {
+        margin-right: 10px;
+    }
+
+    .date-row{
+        padding-left: 5px; 
+    }
+
 }
