year changing in assemblies

--- a/src/pages/assemblies/assemblies.scss
+++ b/src/pages/assemblies/assemblies.scss
@@ -62,7 +62,13 @@ page-assemblies {
 
     .listTitle
     {
-        color : white !important;
+        background-color : transparent;
+        box-shadow: none;
+    }
+
+    .year-title{
+        color: #ffffff;
+        font-size: 25px;
     }
 
     .icon-header-assemblies{
