menu avatar bug  fixed

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,11 +4,11 @@
             <ion-row >
                 <ion-col>
                     <ion-avatar>
-                        <img src="../assets/images/marty.png">
+                        <img src="assets/images/marty.jpg">
                     </ion-avatar>  
                 </ion-col>
             </ion-row>        
-            <ion-row style="margin-top: 20px;">
+            <ion-row>
                 <ion-col>
                     <ion-title >
                         <h2 text-left class="menuheadername"><strong>Lucas Daniel Pedroso</strong></h2>
